--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,23 +3,26 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/qr_game
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/gr_game
     username: qr_game
-    password: qr_game
+    password: ab56eb
   jpa:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.PostgreSQL94Dialect
         temp:
           use_jdbc_metadata_defaults: false
         default_schema: main
+        jdbc:
+          batch_size: 10
+        order_inserts: true
 logging:
   level:
-    #    org:
-    #      springframework:
-    #        web: DEBUG
+#    org:
+#      springframework:
+#        web: DEBUG
     main: DEBUG
   pattern:
     file: "%d{dd.MM.YYYY HH:mm:ss:SSS} [%thread] %-5level %logger{36} %msg%n"
