--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -87,6 +82,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
@@ -95,8 +96,6 @@
 			<url>https://jitpack.io</url>
 		</repository>
 	</repositories>
-
-
 
 	<build>
 		<plugins>
